--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frame",
   "version": "0.0.0",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
@@ -17,10 +18,14 @@
     "@angular/compiler": "~14.1.1",
     "@angular/core": "~14.1.1",
     "@angular/forms": "~14.1.1",
+    "@angular/material": "^14.2.0",
     "@angular/platform-browser": "~14.1.1",
     "@angular/platform-browser-dynamic": "~14.1.1",
     "@angular/router": "~14.1.1",
     "@nrwl/angular": "14.6.3",
+    "ngx-liburg-frame-side": "0.0.23",
+    "ngx-liburg-icon": "0.0.14",
+    "reset-css": "^5.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
